Fix on vertical alignement for units, elements are now aligned to baseline so justified elements correctly align with each others

--- a/stylus/grid.styl
+++ b/stylus/grid.styl
@@ -31,7 +31,7 @@ body.wider
 .unit
     display inline-block
     border $border_default solid transparent
-    vertical-align top
+    vertical-align baseline
     font-size $type_size
 
 // Basic Grid System
